# docs/api/api.yaml
@@ -155,6 +155,89 @@ paths:
         - api_key: [ 'shipping-read' ]
 
 
+  /v1/shipping-orders:
+    post:
+      operationId: "create-shipping-order"
+      description: Create a shipping order
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateShippingOrderRequest'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateShippingOrderResponse'
+        403:
+          description: The caller is not authorized to call this endpoint
+        409:
+          description: Error
+      tags:
+        - Shipping
+      security:
+        - api_key: [ 'shipping-manage' ]
+
+  /v1/shipping-orders/{id}:
+    get:
+      operationId: "get-shipping-order"
+      description: Get a shipping order
+      parameters:
+        - in: path
+          name: id
+          description: ID of the shipping order
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetShippingOrderResponse'
+        403:
+          description: The caller is not authorized to call this endpoint
+        409:
+          description: Error
+      tags:
+        - Shipping
+      security:
+        - api_key: [ 'shipping-read' ]
+
+  /v1/shipping-orders/{id}/status:
+    post:
+      operationId: "change-shipping-order-status"
+      description: Change an shipping order status
+      parameters:
+        - in: path
+          name: id
+          description: ID of the shipping order
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangeStatusRequest'
+      responses:
+        200:
+          description: Success
+        403:
+          description: The caller is not authorized to call this endpoint
+      tags:
+        - Shipping
+      security:
+        - api_key: [ 'shipping-manage' ]
+
+
 components:
   securitySchemes:
     api_key:
@@ -385,8 +468,10 @@ components:
         shippingType:
           type: string
           enum:
+            - IN_STORE_PICKUP
             - LOCAL_PICKUP
             - LOCAL_DELIVERY
+            - INTERNATIONAL_DELIVERY
             - EMAIL_DELIVERY
           description: Type of delivery
         rate:
@@ -400,3 +485,69 @@ components:
           type: integer
           description: Delivery Time in hours
           nullable: true
+
+
+    CreateShippingOrderRequest:
+      type: object
+      properties:
+        orderId:
+          type: string
+          description: ID of order
+      required:
+        - orderId
+
+    CreateShippingOrderResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: ID of shipping-order
+
+    ChangeStatusRequest:
+      type: object
+      properties:
+        status:
+          type: string
+          description: New status
+        reason:
+          type: string
+          description: Reason of the change
+          nullable: true
+        comment:
+          type: string
+          description: Comment
+          nullable: true
+
+
+    GetShippingOrderResponse:
+      type: object
+      properties:
+        shippingOrder:
+          type: object
+          $ref: "#/components/schemas/ShippingOrder"
+
+    ShippingOrder:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: ID of shipping-order
+        orderId:
+          type: string
+          description: ID of order
+        accountId:
+          type: integer
+          format: int64
+          description: ID of the carrier
+        merchantId:
+          type: integer
+          format: int64
+          description: ID of the merchant
+        status:
+          type: string
+          description: Status of the shipping-order
+        shipping:
+          type: object
+          $ref: "#/components/schemas/Shipping"
