# src/main/kotlin/com/wutsi/ecommerce/shipping/dto/CreateShippingOrderRequest.kt
@@ -1,0 +1,9 @@
+package com.wutsi.ecommerce.shipping.dto
+
+import javax.validation.constraints.NotBlank
+import kotlin.String
+
+public data class CreateShippingOrderRequest(
+    @get:NotBlank
+    public val orderId: String = ""
+)
