# src/main/kotlin/com/wutsi/ecommerce/shipping/dto/CreateShippingOrderResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.ecommerce.shipping.dto
+
+import kotlin.Long
+
+public data class CreateShippingOrderResponse(
+    public val id: Long = 0
+)
