# src/main/kotlin/com/wutsi/ecommerce/shipping/entity/ShippingOrderStatus.kt
@@ -1,0 +1,9 @@
+package com.wutsi.ecommerce.shipping.entity
+
+enum class ShippingOrderStatus {
+    CREATED,
+    IN_TRANSIT,
+    READY_FOR_PICKUP,
+    DELIVERED,
+    CANCELLED
+}
